--- a/Teclo_curn.ipynb
+++ b/Teclo_curn.ipynb
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2090,12 +2090,191 @@
     }
    ],
    "source": [
-    "for col in categorical:\n",
+    "for col in categorical :\n",
     " df_group = df_train_full.groupby(by=col).churn.agg(['mean'])\n",
     " df_group['diff'] = df_group['mean'] - global_mean\n",
     " df_group['risk'] = df_group['mean'] / global_mean \n",
     " display(df_group)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mutual_info_score\n",
+    "\n",
+    "def calculate_mi(series):\n",
+    "    return mutual_info_score(series, df_train_full.churn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mi = df_train_full[categorical].apply(calculate_mi)\n",
+    "df_mi = df_mi.sort_values(ascending=False).to_frame(name='MI')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>contract</th>\n",
+       "      <td>0.098320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>onlinesecurity</th>\n",
+       "      <td>0.063085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>techsupport</th>\n",
+       "      <td>0.061032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>internetservice</th>\n",
+       "      <td>0.055868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>onlinebackup</th>\n",
+       "      <td>0.046923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>deviceprotection</th>\n",
+       "      <td>0.043453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>paymentmethod</th>\n",
+       "      <td>0.043210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>streamingtv</th>\n",
+       "      <td>0.031853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>streamingmovies</th>\n",
+       "      <td>0.031581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>paperlessbilling</th>\n",
+       "      <td>0.017589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dependents</th>\n",
+       "      <td>0.012346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>partner</th>\n",
+       "      <td>0.009968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seniorcitizen</th>\n",
+       "      <td>0.009410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>multiplelines</th>\n",
+       "      <td>0.000857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>phoneservice</th>\n",
+       "      <td>0.000229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <td>0.000117</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        MI\n",
+       "contract          0.098320\n",
+       "onlinesecurity    0.063085\n",
+       "techsupport       0.061032\n",
+       "internetservice   0.055868\n",
+       "onlinebackup      0.046923\n",
+       "deviceprotection  0.043453\n",
+       "paymentmethod     0.043210\n",
+       "streamingtv       0.031853\n",
+       "streamingmovies   0.031581\n",
+       "paperlessbilling  0.017589\n",
+       "dependents        0.012346\n",
+       "partner           0.009968\n",
+       "seniorcitizen     0.009410\n",
+       "multiplelines     0.000857\n",
+       "phoneservice      0.000229\n",
+       "gender            0.000117"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tenure           -0.351885\n",
+       "monthlycharges    0.196805\n",
+       "totalcharges     -0.196353\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train_full[numerical].corrwith(df_train_full.churn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
